# react-native-real-time-nitro

./: .gitignore  .npmignore  NitroRealTimeNitro.podspec  README.md  nitro.json  package.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: AndroidBundleHelper.cpp  cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/realtimenitro/: NitroRealTimeNitroOnLoad.kt  NitroRealTimeNitroPackage.kt
cpp/: HybridWebSocket.cpp  HybridWebSocket.hpp
example/: eslint.config.js  package-lock.json  package.json
example/app/: _layout.tsx
ios/: Bridge.h  BundleHelper.mm
src/: index.ts
src/specs/: WebSocket.nitro.ts
